[gd_scene load_steps=4 format=2]

[ext_resource path="res://Escolha.gd" type="Script" id=1]
[ext_resource path="res://png-transparent-computer-icons-society-symbol-business-symbol-miscellaneous-text-social-group.png" type="Texture" id=2]
[ext_resource path="res://png-transparent-dollar-sign-dollar-sign-united-states-dollar-green-dollar-symbol-text-logo-number.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonEscolha1" type="Button" parent="."]
margin_left = 229.0
margin_top = 253.0
margin_right = 302.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 51, 36 )
text = "<1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEscolha2" type="Button" parent="."]
margin_left = 759.0
margin_top = 253.0
margin_right = 832.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 51, 36 )
text = "2>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelConsequencia" type="Label" parent="."]
margin_left = 335.0
margin_top = 128.0
margin_right = 687.0
margin_bottom = 180.0
text = "X coisa aconteceu."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelExplicacaoDecisao" type="Label" parent="."]
margin_left = 386.0
margin_top = 272.0
margin_right = 649.0
margin_bottom = 303.0
text = "Você pode  tomar decisão 1 ou decisão 2
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEconomia" type="Label" parent="."]
margin_left = 344.0
margin_top = 59.0
margin_right = 409.0
margin_bottom = 90.0
text = "30%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSocial" type="Label" parent="."]
margin_left = 345.0
margin_top = 97.0
margin_right = 410.0
margin_bottom = 128.0
text = "50%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteEconomia" type="Sprite" parent="."]
position = Vector2( 317, 65 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="SpriteSocial" type="Sprite" parent="."]
position = Vector2( 318, 104 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="ButtonProsseguir" type="Button" parent="."]
margin_left = 449.0
margin_top = 452.0
margin_right = 580.0
margin_bottom = 472.0
text = "Prosseguir"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ButtonEscolha1" to="." method="_on_ButtonEscolha1_pressed"]
[connection signal="pressed" from="ButtonEscolha2" to="." method="_on_ButtonEscolha2_pressed"]
[connection signal="pressed" from="ButtonProsseguir" to="." method="_on_ButtonProsseguir_pressed"]
